--- a/domain.yml
+++ b/domain.yml
@@ -21,9 +21,27 @@ intents:
   - list_procedures
   - list_tests
   - list_prices
+  - book_appointment
+  - modify_appointment
+  - cancel_appointment
+  - view_appointments
+
 
 entities:
   - specialty
+  - date
+  - time
+  - doctor_name
+  - reason
+  - appointment_id
+
+forms:
+  appointment_form:
+    required_slots:
+      - date
+      - time
+      - doctor_name
+      - reason
 
 slots:
   specialty:
@@ -32,6 +50,38 @@ slots:
     mappings:
     - type: from_entity
       entity: specialty
+
+
+  appointment_id:
+    type: text
+    influence_conversation: false
+    mappings:
+      - type: custom
+
+  date:
+    type: text
+    mappings:
+      - type: from_entity
+        entity: date
+
+  time:
+    type: text
+    mappings:
+      - type: from_entity
+        entity: time
+
+  doctor_name:
+    type: text
+    mappings:
+      - type: from_entity
+        entity: doctor_name
+
+  reason:
+    type: text
+    mappings:
+      - type: from_entity
+        entity: reason
+
 
 responses:
   utter_greet:
@@ -76,6 +126,18 @@ responses:
   utter_default:
     - text: "I'm sorry, I didn't understand that. I can help you with information about our doctors, services, location, hours, or appointments. What would you like to know?"
 
+  utter_ask_date:
+    - text: "What date would you like for your appointment?"
+
+  utter_ask_time:
+    - text: "What time works best for your appointment?"
+
+  utter_ask_doctor_name:
+    - text: "Which doctor would you like to see?"
+
+  utter_ask_reason:
+      - text: "What’s the reason for your visit?"
+
 actions:
   - action_greet_user
   - action_list_doctors
@@ -83,6 +145,13 @@ actions:
   - action_list_procedures
   - action_list_tests
   - action_list_prices
+  - action_book_appointment
+  - action_modify_appointment
+  - action_cancel_appointment
+  - action_view_appointments
+  - action_submit_appointment_form
+
+
 
 session_config:
   session_expiration_time: 60
