--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,92 +1,97 @@
 version: "3.1"
 
 stories:
-  - story: User reports a symptom and gets specialist help
-    steps:
-      - intent: report_symptom_intent
-      - action: utter_symptom_acknowledgement
-      - intent: affirm
-      - action: utter_list_specialists
-      - intent: ask_doctors_by_specialty
-        entities:
-        - entity: specialty
-          value: "Adult Cardiology"
-      - action: action_list_doctors_by_specialty
 
-  - story: User directly asks for adult cardiology doctors
-    steps:
-      - intent: ask_doctors_by_specialty
-        entities:
-        - entity: specialty
-          value: "Adult Cardiology"
-      - action: action_list_doctors_by_specialty
+- story: view medical records
+  steps:
+  - intent: view_medical_records
+  - action: action_view_medical_records
 
-  - story: User directly asks for pediatric cardiology doctors
-    steps:
-      - intent: ask_doctors_by_specialty
-        entities:
-        - entity: specialty
-          value: "Pediatric Cardiology"
-      - action: action_list_doctors_by_specialty
+- story: User reports a symptom and gets specialist help
+  steps:
+    - intent: report_symptom_intent
+    - action: utter_symptom_acknowledgement
+    - intent: affirm
+    - action: utter_list_specialists
+    - intent: ask_doctors_by_specialty
+      entities:
+      - entity: specialty
+        value: "Adult Cardiology"
+    - action: action_list_doctors_by_specialty
 
-  - story: User directly asks for cardiovascular surgery doctors
-    steps:
-      - intent: ask_doctors_by_specialty
-        entities:
-        - entity: specialty
-          value: "Cardiovascular Surgery"
-      - action: action_list_doctors_by_specialty
+- story: User directly asks for adult cardiology doctors
+  steps:
+    - intent: ask_doctors_by_specialty
+      entities:
+      - entity: specialty
+        value: "Adult Cardiology"
+    - action: action_list_doctors_by_specialty
 
-  - story: User says adult and gets adult cardiology
-    steps:
-      - intent: ask_doctors_by_specialty
-        entities:
-        - entity: specialty
-          value: "Adult"
-      - action: action_list_doctors_by_specialty
+- story: User directly asks for pediatric cardiology doctors
+  steps:
+    - intent: ask_doctors_by_specialty
+      entities:
+      - entity: specialty
+        value: "Pediatric Cardiology"
+    - action: action_list_doctors_by_specialty
 
-  - story: User says pediatric and gets pediatric cardiology
-    steps:
-      - intent: ask_doctors_by_specialty
-        entities:
-        - entity: specialty
-          value: "Pediatric"
-      - action: action_list_doctors_by_specialty
+- story: User directly asks for cardiovascular surgery doctors
+  steps:
+    - intent: ask_doctors_by_specialty
+      entities:
+      - entity: specialty
+        value: "Cardiovascular Surgery"
+    - action: action_list_doctors_by_specialty
 
-  - story: User asks for procedure list
-    steps:
-      - intent: list_procedures
-      - action: action_list_procedures
+- story: User says adult and gets adult cardiology
+  steps:
+    - intent: ask_doctors_by_specialty
+      entities:
+      - entity: specialty
+        value: "Adult"
+    - action: action_list_doctors_by_specialty
 
-  - story: User asks for test list
-    steps:
-      - intent: list_tests
-      - action: action_list_tests
+- story: User says pediatric and gets pediatric cardiology
+  steps:
+    - intent: ask_doctors_by_specialty
+      entities:
+      - entity: specialty
+        value: "Pediatric"
+    - action: action_list_doctors_by_specialty
 
-  - story: User asks for price list
-    steps:
-      - intent: list_prices
-      - action: action_list_prices
+- story: User asks for procedure list
+  steps:
+    - intent: list_procedures
+    - action: action_list_procedures
 
-  - story: User asks about services then wants procedures
-    steps:
-      - intent: ask_services_intent
-      - action: utter_services
-      - intent: list_procedures
-      - action: action_list_procedures
+- story: User asks for test list
+  steps:
+    - intent: list_tests
+    - action: action_list_tests
 
+- story: User asks for price list
+  steps:
+    - intent: list_prices
+    - action: action_list_prices
 
-  - story: modify appointment
-    steps:
-      - intent: modify_appointment
-      - action: action_modify_appointment
+- story: User asks about services then wants procedures
+  steps:
+    - intent: ask_services_intent
+    - action: utter_services
+    - intent: list_procedures
+    - action: action_list_procedures
 
-  - story: cancel appointment
-    steps:
-      - intent: cancel_appointment
-      - action: action_cancel_appointment
+- story: modify appointment
+  steps:
+    - intent: modify_appointment
+    - action: action_modify_appointment
 
-  - story: view appointments
-    steps:
-      - intent: view_appointments
-      - action: action_view_appointments
+- story: cancel appointment
+  steps:
+    - intent: cancel_appointment
+    - action: action_cancel_appointment
+
+- story: view appointments
+  steps:
+    - intent: view_appointments
+    - action: action_view_appointments
