--- a/requirements.txt
+++ b/requirements.txt
@@ -121,7 +121,8 @@ sentry-sdk==1.14.0
 six==1.16.0
 sklearn-crfsuite==0.3.6
 slack-sdk==3.21.3
-SQLAlchemy==1.4.49
+SQLAlchemy<2.0
+PyMySQL==1.1.0
 structlog==23.1.0
 structlog-sentry==2.0.3
 tabulate==0.9.0
