--- a/domain.yml
+++ b/domain.yml
@@ -102,7 +102,7 @@ responses:
     - text: "You're very welcome! Is there anything else I can help you with?"
 
   utter_contact:
-    - text: "You can reach us at:\n📞 Phone: +1 (555) 123-4567\n📧 Email: info@cardiologyclinic.com"
+    - text: "You can reach us at:\n📞 Phone: +4 074 123 456\n📧 Email: info@cardiologyclinic.com"
 
   utter_parking:
     - text: "Yes, we have free parking available for all patients. Our parking lot is located directly in front of the clinic building."
@@ -111,7 +111,7 @@ responses:
     - text: "We accept most major insurance plans including. Please call us to verify your specific plan."
 
   utter_working_hours:
-    - text: "Our clinic hours are:\n🕐 Monday - Friday: 8:00 AM - 6:00 PM\n🕐 Saturday: 9:00 AM - 2:00 PM\n🕐 Sunday: Closed"
+    - text: "Our clinic hours are:\n🕐 Monday - Friday: 8:00 AM - 6:00 PM\n🕐 Saturday: 9:00 AM - 2:00 PM\n🕐 Sunday: Closed\n\n📅 Appointments can only be booked during these hours."
 
   utter_location:
     - text: "Our clinic is located at:\n📍 123 Heart Health Avenue, Medical District, City, State 12345\nWe're on the second floor of the Medical Plaza building."
